--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
         <h1>
           Your smile is as beautiful as rose, I hope you can always smile.
           (✿◡w◡)
+           
+          Love you Nhi,
+
+          From Huy.
         </h1>
       </div>
       <div class="rose">
